Fix alignment of the "Update branch" button for PRs (#981)

--- a/source/content.css
+++ b/source/content.css
@@ -119,7 +119,7 @@
 .mergeability-details .branch-action-item-icon {
 	margin-top: -4px;
 }
-.mergeability-details .branch-action-item .float-right.btn {
+.mergeability-details .branch-action-item .btn {
 	margin-top: -6px;
 }
 .alt-merge-options {
